--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cardholder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/cardholder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -31,6 +32,7 @@
     "workbox-streams": "^6.5.4"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
